# Chorus

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.gpu  LICENSE  README.md  REVIEW.md  ROADMAP.md  SECURITY.md  config.py  config.toml  docker-compose.gpu.yml  docker-compose.ollama.yml  docker-compose.yml  docker-publish.sh  docker-test.sh  gh_init.sh  pipeline_runner.py  pyproject.toml  requirements.txt  utils.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  ollama-model-tags-check.yml  release.yml  security.yml
.proxyai/checkpoints/ca3e99a6-f3ea-4887-8d04-3e03030ced26/: 30142ff1-d505-44db-b332-4ed8baae3d5e  353beaeb-7569-4d11-9bed-74d3da26bbf6  4630ccf8-a84f-4176-8c0e-89c86b469e51  4da33437-da89-4f52-a149-a18d1ff570ea  55898c2f-d7a2-4072-83b0-f16774cf8194  5698ed95-9ecb-46df-890c-b53154cc293d  65c5db07-dc45-40ea-8274-72385e271ebc  795e4200-a188-4059-9f48-f9837d1e4703  d57d919f-a5e2-454b-8c02-1d491deef124  d748ca72-9263-4af5-965e-9567d1b855da
.serena/: project.yml
audio_processor/: filters.py  pipeline.py
batch_processor/: batch_runner.py
benchmarks/: README.md  RESULTS.md  run_benchmark.py
chorus/: __init__.py
consensus_merger/: alignment.py  merger.py  renderer.py  sequence_alignment.py
devops-practices/: check-clone-refs.sh  check-test-baseline.sh  check-version-sync.sh  survey-ollama-env.sh
diarisation/: diariser.py
docs/: ARCHITECTURE.md  CHORUS_FOR_LLMS.md  CONFIGURATION.md  DOCKER.md  SCALABILITY.md
docs/tasks/: AGENT-CONVENTIONS.md  RB-1-release-skip-cascade.md  RB-2-wer-calibration-benchmark.md  RB-3-pdf-low-tier-strikethrough.md  RB-4-bundle-schema-version-contract.md  RB-5-ui-run-loop-tests.md  RB-6-mps-warning-cleanup.md  README.md  WP1-packaging-and-public-api.md  WP2-output-routing-correctness.md  WP3-test-parity-and-ci.md  WP4-headline-features.md  streamlit-ui-tests.md
export_engine/: ai_context.py  exporter.py
llm_reconstructor/: __init__.py  ollama_client.py  reconstructor.py
nlp_reconstructor/: reconstructor.py
reconstruction/: __init__.py  llm.py  nlp.py  ollama_client.py
tests/: check_dependency_drift.sh  test_ai_context.py  test_alignment.py  test_audio_processor.py  test_batch_runner.py  test_benchmark.py  test_config_models.py  test_exporter.py  test_hardware_survey.py  test_integration.py  test_llm_reconstructor.py  test_merger.py  test_orchestrator.py  test_pipeline_events.py  test_public_api.py  test_reconstructor.py  test_run_manager.py  test_sequence_alignment.py  test_speaker_names.py  test_ui_app.py  test_ui_run_loop.py  test_version_sync.py  test_whisper_engine.py  version_consistency_test.sh
transcription_engine/: orchestrator.py  whisper_engine.py
ui/: app.py  hardware_survey.py  pipeline_invocation.py  results.py  run_manager.py  run_state.py  run_worker.py  sidebar.py  theme.py  upload.py
ui/pages/: 1_Help.py  2_Logs.py  3_Past_Jobs.py
