[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chorus-engine"
version = "3.1.1"
description = "Chorus — A containerised, multi-pass consensus audio transcription engine."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = [
  "audio_processor*",
  "transcription_engine*",
  "consensus_merger*",
  "diarisation*",
  "nlp_reconstructor*",
  "llm_reconstructor*",
  "export_engine*",
  "batch_processor*",
  "ui*",
]

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "isort",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "detect-secrets",
]

# ── Black ─────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 88
target-version = ["py311"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "PT"]
ignore = [
  "S101",   # allow assert in tests
  "E501",   # line length is governed by Black formatting
  "PT001",  # allow @pytest.fixture style without parentheses
  "PT019",  # allow fixture injection in tests for readability
  "S310",   # local Ollama endpoint URLs are validated by configuration
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "ANN"]

# ── isort ─────────────────────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 88

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--tb=short"
