[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chorus-engine"
version = "4.1.0"
description = "Chorus — A containerised, multi-pass consensus audio transcription engine."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
# Runtime dependencies. These mirror the pinned entries in ``requirements.txt``,
# which remains the canonical pin file referenced by the Dockerfiles and CI.
# Keep the two lists in step when bumping a pin.
dependencies = [
  "openai-whisper==20250625",
  "librosa==0.11.0",
  "soundfile==0.14.0",
  "pydub==0.25.1",
  "scipy==1.17.1",
  "numpy==2.4.6",
  "nltk==3.10.0",
  "streamlit==1.59.2",
  "watchdog==6.0.0",
  "psutil==7.2.2",
  "pyannote-audio==4.0.7",
  "spacy==3.8.13",
  "weasyprint==69.0",
  "python-docx==1.2.0",
  "Markdown==3.10.2",
  "tqdm==4.69.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "chorus*",
  "audio_processor*",
  "transcription_engine*",
  "consensus_merger*",
  "diarisation*",
  "reconstruction*",
  "export_engine*",
  "batch_processor*",
  "ui*",
]

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "isort",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "detect-secrets",
  "bandit",
  "safety",
  "pip-audit",
  "jiwer",
]

# ── Black ─────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 88
target-version = ["py311"]
exclude = '''
/(
    \.git
  | \.venv
  | \.claude
  | __pycache__
)/
'''

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "PT"]
ignore = [
  "S101",   # allow assert in tests
  "E501",   # line length is governed by Black formatting
  "PT001",  # allow @pytest.fixture style without parentheses
  "PT019",  # allow fixture injection in tests for readability
  "S310",   # local Ollama endpoint URLs are validated by configuration
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "ANN"]
# hardware_survey.py uses subprocess with known-safe literal args (sysctl, nvidia-smi)
# and bare except-pass for graceful hardware detection fallbacks.
"ui/hardware_survey.py" = ["S603", "S607", "S110"]

# ── isort ─────────────────────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 88

# ── bandit ────────────────────────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = [".venv", "tests", ".git"]
severity_level = "medium"
confidence_level = "high"
skips = [
  # B101: Allow assert in tests (handled by pytest)
  "B101",
  # B601: Paramiko is used for SSH (secure by design)
  # Not applicable to this project
]

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--tb=short"
